@startuml
title GoF — Proxy
' ЛР6 — GoF UML
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam packageStyle rectangle
skinparam ArrowThickness 1
skinparam RoundCorner 12
skinparam defaultTextAlignment center
hide empty members
left to right direction

interface OrderService {
  +create_order()
  +change_status()
  +cancel_order()
}

class OrderFacade
class OrderServiceProxy {
  +check_role()
}

class OrdersApi

OrderService <|.. OrderFacade
OrderService <|.. OrderServiceProxy
OrderServiceProxy o-- OrderService : delegates
OrdersApi --> OrderServiceProxy
@enduml
